# prob-nqs

./: README.md  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml
docs/: paper_guide.md
examples/: quickstart_dbm_dual_sampling_small.py  quickstart_frbm_small.py
results/fig2_frbm_small/: frbm_metrics.json
src/pcnqs/: __init__.py  types.py
src/pcnqs/config/: __init__.py  presets.py  schemas.py
src/pcnqs/experiments/: __init__.py  reproduce_fig2_frbm.py  reproduce_fig4_fig5_dbm.py  scaling_benchmarks.py
src/pcnqs/nqs/: __init__.py  dbm.py  frbm.py  parameterization.py
src/pcnqs/optim/: __init__.py  cg.py  lr_schedules.py  sr.py
src/pcnqs/physics/: __init__.py  observables.py  tfim.py
src/pcnqs/sampling/: __init__.py  backend.py  schedules.py  thrml_backend.py
src/pcnqs/utils/: __init__.py  checks.py  io.py  logging.py  rng.py
src/pcnqs/vmc/: __init__.py  estimators.py  gradients.py  training.py
tests/: test_dbm_dual_sampling_unbiased_limit.py  test_frbm_analytic_ratios.py  test_reproduce_small_configs_smoke.py  test_sr_cg.py  test_tfim.py  test_thrml_backend_matches_ising_distribution.py
