[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pcnqs"
version = "0.1.0"
description = "Probabilistic-computing neural quantum states with THRML backends"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PCNQS Contributors" }]
license = { text = "MIT" }
dependencies = [
  "jax>=0.9.0",
  "numpy>=2.0",
  "scipy>=1.12",
  "pydantic>=2.8",
  "matplotlib>=3.8",
  "thrml>=0.1.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pcnqs"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "ANN", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = "src"
files = ["src", "tests", "examples"]

[[tool.mypy.overrides]]
module = ["thrml.*", "jax.*", "matplotlib.*"]
ignore_missing_imports = true
